# OrionOS

./: .gitignore  Cargo.toml  README.md
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/kernel/: core.rs  memory.rs  mod.rs
src-tauri/src/security/: authentication.rs  encryption.rs  mod.rs
